tests/rosetta/transpiler/Haskell/15-puzzle-game.error
run: exit status 1

/workspace/mochi/tests/rosetta/transpiler/Haskell/15-puzzle-game.hs:102:72: error:
    • Couldn't match expected type ‘IORef a6’ with actual type ‘Int’
    • In the first argument of ‘newIORef’, namely ‘(randMove)’
      In the first argument of ‘unsafePerformIO’, namely
        ‘(newIORef (randMove))’
      In the first argument of ‘doMove’, namely
        ‘(unsafePerformIO (newIORef (randMove)))’
    |
102 |                 if unsafePerformIO (doMove (unsafePerformIO (newIORef (randMove)))) then do
    |                                                                        ^^^^^^^^
